--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,9 @@ button {
     font-size: large;
     cursor: pointer;
 }
+button:hover {
+    background-color: #2b2b2b;
+}
 
 #tweet-quote {
     width: 40px;
@@ -70,8 +73,4 @@ button {
 
 .quote_icon {
     margin-right: 15px;
-}
-
-.main {
-    transition: opacity 0.5s ease-in-out;
 }
