--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 #quote-box {
     background-color: white;
     padding: 25px 50px;
-    border-radius: 3px;
+    border-radius: 5px;
     max-width: 560px;
 }
 
@@ -23,6 +23,16 @@
     font-size: x-large;
     margin-bottom: 20px;
     color: black;
+    animation-name: text-appearance;
+    animation-duration: 1s;
+}
+@keyframes text-appearance {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 #author {
@@ -37,7 +47,7 @@
 }
 
 button {
-    border-radius: 3px;
+    border-radius: 5px;
     border-style: none;
     height: 40px;
     width: 150px;
@@ -58,7 +68,7 @@ button:hover {
     place-content: center;
     color: white;
     font-size: large;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 #author {
